--- a/ecommerce_backend/requirements.txt
+++ b/ecommerce_backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.9.1
+dj-database-url==3.0.1
 Django==5.2.6
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
@@ -6,6 +7,7 @@ djangorestframework_simplejwt==5.5.1
 gunicorn==23.0.0
 mysqlclient==2.2.7
 packaging==25.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
